--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ rusqlite = "0.30.0"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 toml = "0.8.10"
+jobdispatcher = { git = "https://git.hydrar.de/jmarya/jobdispatcher" }
