--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 toml = "0.8.10"
 jobdispatcher = { git = "https://git.hydrar.de/jmarya/jobdispatcher" }
+reqwest = { version = "0.11.26", features = ["blocking", "json"] }
